tests/lex-fail/bad_float.fl.0.exp
Error: bad_float.fl(1,1): Missing fractional part of floating point literal
10.
^   
